# OpenBlockCraft

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Assets/: chunkF.glsl  chunkV.glsl
cmake/: compilerFlags.cmake  game.cmake  glew.cmake  msvcAbi.cmake  openSimplexNoise.cmake
source/: main.cpp
source/core/: file.cpp  file.hpp  frustrum.cpp  frustrum.hpp  noise.cpp  noise.hpp  singleton.hpp
source/core/geometry/: cube.hpp
source/platform/: platform.hpp  timer.cpp  timer.hpp  window.cpp  window.hpp  windowManager.cpp  windowManager.hpp
source/platform/glfw/: GLFWInputKeys.cpp  GLFWPlatform.cpp  GLFWTimer.cpp  GLFWTimer.hpp  GLFWWindow.cpp  GLFWWindow.hpp  GLFWWindowManager.cpp  GLFWWindowManager.hpp
source/platform/input/: iInputListener.hpp  inputEvents.hpp  inputKeys.hpp  inputManager.cpp  inputManager.hpp
source/platform/macOS/: workingdirectory.mm
source/platform/unix/: workingDirectory.cpp
source/platform/win32/: workingDirectory.cpp
source/platformMacOS/: workingdirectory.mm
source/scene/: camera.cpp  camera.hpp  sceneObject.cpp  sceneObject.hpp
source/scene/world/: block.hpp  chunk.cpp  chunk.hpp  chunkManager.cpp  chunkManager.hpp
